# sandbox

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  imgui.ini  period.json  sh.exe.stackdump
Sandbox/: CMakeLists.txt  Sandbox.cpp  Sandbox.h
assets/models/: Hyperspace_Madness_Killamari_Minion.glb  Tiger.glb  shadow.vert
assets/shaders/: ao.frag  ao.vert  ao_blur_horizontal.comp  ao_blur_vertical.comp  ascii.frag  ascii.vert  blur.comp  blur_horizontal.comp  blur_vertical.comp  caustic_mapping.frag  caustic_mapping.vert  caustic_receiver.frag  caustic_refractive.frag  color.vert  deferred_phong_shading.frag  depth.frag  depth_out.frag  environment_mapping.frag  environment_mapping.vert  fsq.frag  fsq.vert  geometry_buffer.frag  geometry_buffer.vert  global_brdf.frag  global_brdf.vert  global_brdf_forward.frag  global_brdf_forward.vert  global_lighting.frag  global_lighting_shadow.frag  local_brdf.frag  local_brdf.vert  local_lighting.frag  model.vert  phong_shading.frag  phong_shading.vert  phong_shading_animated.vert  shadow.frag  shadow.vert  shadow_map.frag  shadow_map.vert  (+5 more)
cmake/: imgui_setup.cmake  implot_setup.cmake  shaderc_setup.cmake  submodule_setup.cmake
data/: log.txt
include/: bone.h  pch.h  sandbox.h  sandbox_pch.h
include/framework/: animated_model.h  animation.h  animator.h  application.h  assimp_helper.h  assimp_loader.h  backend.h  bone.h  camera.h  ik.h  (+42 more)
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/nlohmann_json/: .travis.yml  README.md  wsjcpp.yml
lib/nlohmann_json/.github/ISSUE_TEMPLATE/: config.yml
lib/nlohmann_json/benchmarks/src/: benchmarks.cpp
lib/nlohmann_json/doc/docset/: docSet.sql
lib/nlohmann_json/doc/examples/: sax_parse.cpp
lib/nlohmann_json/doc/mkdocs/: mkdocs.yml
lib/nlohmann_json/doc/mkdocs/docs/api/basic_json/: items.md
lib/nlohmann_json/doc/mkdocs/docs/features/: arbitrary_types.md  enum_conversion.md  iterators.md
lib/nlohmann_json/doc/mkdocs/docs/integration/: cmake.md  package_managers.md
lib/nlohmann_json/doc/scripts/: send_to_wandbox.py
lib/nlohmann_json/include/nlohmann/: json.hpp
lib/nlohmann_json/include/nlohmann/detail/: exceptions.hpp  macro_scope.hpp
lib/nlohmann_json/include/nlohmann/detail/input/: json_sax.hpp
lib/nlohmann_json/include/nlohmann/detail/iterators/: internal_iterator.hpp  iter_impl.hpp
lib/nlohmann_json/include/nlohmann/detail/meta/: type_traits.hpp
lib/nlohmann_json/single_include/nlohmann/: json.hpp
lib/nlohmann_json/test/src/: unit-algorithms.cpp  unit-assert_macro.cpp  unit-bson.cpp  unit-cbor.cpp  unit-class_const_iterator.cpp  unit-class_iterator.cpp  unit-class_parser.cpp  unit-comparison.cpp  unit-concepts.cpp  unit-constructor1.cpp  unit-convenience.cpp  unit-conversions.cpp  unit-deserialization.cpp  unit-diagnostics.cpp  unit-element_access1.cpp  unit-element_access2.cpp  unit-inspection.cpp  unit-iterators1.cpp  unit-iterators2.cpp  unit-json_patch.cpp  unit-json_pointer.cpp  unit-meta.cpp  unit-modifiers.cpp  unit-msgpack.cpp  unit-readme.cpp  unit-reference_access.cpp  unit-regression1.cpp  unit-regression2.cpp  unit-serialization.cpp  unit-testsuites.cpp  unit-ubjson.cpp  unit-udt.cpp  unit-udt_macro.cpp  unit-unicode.cpp
lib/stb/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  pch.cpp  sandbox.cpp  sandbox_pch.cpp
src/common/api/: backend.cpp  window.cpp
src/common/api/buffer/: buffer.cpp  ebo.cpp  fbo.cpp  rbo.cpp  ubo.cpp  vao.cpp  vao_manager.cpp  vbo.cpp
src/common/api/shader/: shader.cpp  shader_compiler.cpp  shader_component.cpp  shader_data_types.cpp  shader_descriptor.cpp  shader_element.cpp  shader_info.cpp  shader_library.cpp  shader_parser.cpp  shader_preprocessor.cpp  shader_types.cpp  shader_uniform.cpp  shader_uniform_lut.cpp
src/common/application/: application.cpp  input.cpp  scene.cpp  scene_manager.cpp  time.cpp
src/common/camera/: camera.cpp  fps_camera.cpp
src/common/ecs/: ecs.cpp
src/common/ecs/component/: component.cpp  component_list.cpp  component_manager.cpp  component_manager_collection.cpp
src/common/ecs/entity/: entity_manager.cpp
src/common/ecs/iterator/: entity_component_iterator.cpp
src/common/ecs/system/: component_system.cpp
src/common/geometry/: bounds.cpp  mesh.cpp  model.cpp  model_manager.cpp  object_loader.cpp  topology.cpp  transform.cpp
src/common/lighting/: light.cpp  lighting_manager.cpp
src/common/material/: material.cpp  material_library.cpp
src/common/texture/: texture.cpp  texture_library.cpp
src/common/utility/: directory.cpp  directory_utils.cpp  imgui_log.cpp  log.cpp  reloadable.cpp  rgbe.cpp
src/framework/: animated_model.cpp  animation.cpp  animator.cpp  application.cpp  assimp_helper.cpp  assimp_loader.cpp  backend.cpp  bone.cpp  camera.cpp  debug.cpp  directory_utils.cpp  ik.cpp  imgui_log.cpp  input.cpp  interpolation.cpp  light.cpp  lighting_manager.cpp  material.cpp  material_library.cpp  mesh.cpp  model.cpp  model_manager.cpp  object_loader.cpp  path.cpp  pather.cpp  primitive_loader.cpp  quaternion.cpp  rigid_body.cpp  scene.cpp  scene_manager.cpp  shader.cpp  shader_data_types.cpp  shader_library.cpp  shader_uniform.cpp  skinned_mesh.cpp  texture.cpp  texture_library.cpp  time.cpp  transform.cpp  ubo_manager.cpp  (+2 more)
src/framework/buffer/: buffer.cpp  ebo.cpp  fbo.cpp  rbo.cpp  ubo.cpp  vao.cpp  vbo.cpp
src/framework/camera/: camera.cpp  fps_camera.cpp
src/scenes/: ascii_post_processing.cpp  deferred_rendering.cpp
src/scenes/ascii_post_processing/: ascii_character_map.cpp  ascii_character_map_manager.cpp  ascii_post_processing.cpp  character_bitmap.cpp
src/scenes/cs562/project1/: light.cpp  project1.cpp
src/scenes/cs562/project2/: project2.cpp
src/scenes/cs562/project3/: project3.cpp
src/scenes/cs562/project4/: project4.cpp
src/scenes/cs562/project5/: project5.cpp
src/scenes/deferred_rendering/: deferred_rendering.cpp
src/scenes/project1/: project1.cpp
src/scenes/project2/: project2.cpp
src/scenes/project3/: project3.cpp
src/scenes/project4/: project4.cpp
tools/: buildVS.bat
(+138 files in other folders)
