# CMakeList.txt : CMake project for Sandbox, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Sandbox")

# Add source to this project's executable.
add_executable (Sandbox "Sandbox.cpp" "Sandbox.h")

# TODO: Add tests and install targets if needed.
