
# Initialize dependencies.
# Build glad.
message(STATUS "Building Glad.")
add_subdirectory(glad EXCLUDE_FROM_ALL)

# Build GLFW.
set(GLFW_BUILD_DOCS OFF CACHE BOOL "Build GLFW documentation." FORCE) # Turn off building GLFW documentation.
set(GLFW_BUILD_TESTS OFF CACHE BOOL "Build GLFW tests." FORCE)        # Turn off building GLFW tests.
set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "Build GLFW examples." FORCE)  # Turn off building GLFW example code.

message(STATUS "Building GLFW.")
add_subdirectory(glfw EXCLUDE_FROM_ALL)

# Build GLM.
message(STATUS "Building GLM.")
add_subdirectory(glm EXCLUDE_FROM_ALL)

# Build ImGui.
message(STATUS "Building ImGui.")
include(imgui_setup IMGUI_SETUP_RESULT)

# Build STB
message(STATUS "Building STB.")
add_subdirectory(stb EXCLUDE_FROM_ALL)

# Build TinyOBJLoader
message(STATUS "Building TinyOBJLoader.")
add_subdirectory(tinyobj EXCLUDE_FROM_ALL)

# Build Assimp
message(STATUS "Building Assimp.")

# No tests or installation of targets.
SET (ASSIMP_BUILD_TESTS OFF)
SET (ASSIMP_INSTALL OFF)
# Configure importers.
SET (ASSIMP_BUILD_AMF_IMPORTER OFF)
SET (ASSIMP_BUILD_3DS_IMPORTER OFF)
SET (ASSIMP_BUILD_AC_IMPORTER OFF)
SET (ASSIMP_BUILD_ASE_IMPORTER OFF)
SET (ASSIMP_BUILD_ASSBIN_IMPORTER OFF)
SET (ASSIMP_BUILD_B3D_IMPORTER OFF)
SET (ASSIMP_BUILD_BVH_IMPORTER OFF)
SET (ASSIMP_BUILD_COLLADA_IMPORTER OFF)
SET (ASSIMP_BUILD_DXF_IMPORTER OFF)
SET (ASSIMP_BUILD_CSM_IMPORTER OFF)
SET (ASSIMP_BUILD_HMP_IMPORTER OFF)
SET (ASSIMP_BUILD_IRRMESH_IMPORTER OFF)
SET (ASSIMP_BUILD_IRR_IMPORTER OFF)
SET (ASSIMP_BUILD_LWO_IMPORTER OFF)
SET (ASSIMP_BUILD_LWS_IMPORTER OFF)
SET (ASSIMP_BUILD_M3D_IMPORTER OFF)
SET (ASSIMP_BUILD_MD2_IMPORTER OFF)
SET (ASSIMP_BUILD_MD3_IMPORTER OFF)
SET (ASSIMP_BUILD_MD5_IMPORTER OFF)
SET (ASSIMP_BUILD_MDC_IMPORTER OFF)
SET (ASSIMP_BUILD_MDL_IMPORTER OFF)
SET (ASSIMP_BUILD_NFF_IMPORTER OFF)
SET (ASSIMP_BUILD_NDO_IMPORTER OFF)
SET (ASSIMP_BUILD_OFF_IMPORTER OFF)
SET (ASSIMP_BUILD_OGRE_IMPORTER OFF)
SET (ASSIMP_BUILD_OPENGEX_IMPORTER OFF)
SET (ASSIMP_BUILD_PLY_IMPORTER OFF)
SET (ASSIMP_BUILD_MS3D_IMPORTER OFF)
SET (ASSIMP_BUILD_COB_IMPORTER OFF)
SET (ASSIMP_BUILD_BLEND_IMPORTER OFF)
SET (ASSIMP_BUILD_IFC_IMPORTER OFF)
SET (ASSIMP_BUILD_XGL_IMPORTER OFF)
SET (ASSIMP_BUILD_Q3D_IMPORTER OFF)
SET (ASSIMP_BUILD_Q3BSP_IMPORTER OFF)
SET (ASSIMP_BUILD_RAW_IMPORTER OFF)
SET (ASSIMP_BUILD_SIB_IMPORTER OFF)
SET (ASSIMP_BUILD_SMD_IMPORTER OFF)
SET (ASSIMP_BUILD_STL_IMPORTER OFF)
SET (ASSIMP_BUILD_TERRAGEN_IMPORTER OFF)
SET (ASSIMP_BUILD_3D_IMPORTER OFF)
SET (ASSIMP_BUILD_X_IMPORTER OFF)
SET (ASSIMP_BUILD_X3D_IMPORTER OFF)
SET (ASSIMP_BUILD_3MF_IMPORTER OFF)
SET (ASSIMP_BUILD_MMD_IMPORTER OFF)
SET (ASSIMP_BUILD_FBX_IMPORTER OFF)
SET (ASSIMP_BUILD_OBJ_IMPORTER OFF)
# Configure exporters
SET (ASSIMP_BUILD_OPENGEX_EXPORTER OFF)
SET (ASSIMP_BUILD_PLY_EXPORTER OFF)
SET (ASSIMP_BUILD_3DS_EXPORTER OFF)
SET (ASSIMP_BUILD_ASSBIN_EXPORTER OFF)
SET (ASSIMP_BUILD_ASSXML_EXPORTER OFF)
SET (ASSIMP_BUILD_M3D_EXPORTER OFF)
SET (ASSIMP_BUILD_COLLADA_EXPORTER OFF)
SET (ASSIMP_BUILD_STL_EXPORTER OFF)
SET (ASSIMP_BUILD_X_EXPORTER OFF)
SET (ASSIMP_BUILD_X3D_EXPORTER OFF)
SET (ASSIMP_BUILD_3MF_EXPORTER OFF)
SET (ASSIMP_BUILD_PBRT_EXPORTER OFF)
SET (ASSIMP_BUILD_ASSJSON_EXPORTER OFF)
SET (ASSIMP_BUILD_STEP_EXPORTER OFF)
SET (ASSIMP_BUILD_FBX_EXPORTER OFF)
SET (ASSIMP_BUILD_OBJ_EXPORTER OFF)

add_subdirectory(assimp EXCLUDE_FROM_ALL)

# ImPlot
message(STATUS "Building ImPlot.")
include(implot_setup IMPLOT_SETUP_RESULT)


